manifests/prometheus-kubeControllerManagerPrometheusDiscoveryEndpoints.yaml
apiVersion: v1
kind: Endpoints
metadata:
  labels:
    k8s-app: kube-controller-manager-prometheus-discovery
  name: kube-controller-manager-prometheus-discovery
  namespace: kube-system
subsets:
- addresses:
  - ip: 10.1.0.151
  ports:
  - name: http-metrics
    port: 10252
    protocol: TCP
