manifests/ingress-alertmanager.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alertmanager-main
  namespace: monitoring
spec:
  rules:
  - host: alertmanager.10.1.0.160.nip.io
    http:
      paths:
      - backend:
          service:
            name: alertmanager-main
            port:
              name: web
        path: /
        pathType: Prefix
