manifests/ingress-grafana.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: monitoring
spec:
  rules:
  - host: calavelas.ddns.net
    http:
      paths:
      - backend:
          service:
            name: grafana
            port:
              name: http
        path: /grafana
        pathType: Prefix
  - host: grafana.10.1.0.151.nip.io
    http:
      paths:
      - backend:
          service:
            name: grafana
            port:
              name: http
        path: /
        pathType: Prefix
